# embind-example

./: .gitignore  CMakeLists.txt  main.ts  package-lock.json  package.json  readme.md  tsconfig.json
MyClass/: CMakeLists.txt  MyClass.hpp  bindings.cpp  main.cpp
